--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
   <name>Doxia Site Renderer Resources</name>
   <inceptionYear>2011</inceptionYear>
+  <url>http://dthu.me/projects/org/dthume/${project.artifactId}/${project.version}/</url>
 
   <description>
     Resources files needed by custom Maven skins
