--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,17 @@
 
   <name>Doxia Site Renderer Resources</name>
   <inceptionYear>2011</inceptionYear>
-    <url>https://dthume.github.com/doxia-site-renderer-resources/</url>
+  <url>https://dthume.github.com/${project.artifactId}/</url>
 
   <description>
     Resources files needed by custom Maven skins
   </description>
+
+  <scm>
+    <connection>scm:git:git://github.com/dthume/${project.artifactId}.git</connection>
+    <developerConnection>scm:git:git@github.com:dthume/${project.artifactId}.git</developerConnection>
+    <url>https://github.com/dthume/${project.artifactId}</url>
+  </scm>
 
   <distributionManagement>
     <site>
