--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
   <name>Doxia Site Renderer Resources</name>
   <inceptionYear>2011</inceptionYear>
-  <url>https://dthume.github.com/${project.artifactId}/</url>
+  <url>http://dthume.github.com/${project.artifactId}/</url>
 
   <description>
     Resources files needed by custom Maven skins
