--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
   <parent>
     <groupId>org.dthume</groupId>
     <artifactId>dthume-parent</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.2</version>
   </parent>
 
   <artifactId>doxia-site-renderer-resources</artifactId>
-  <version>1.2.1-SNAPSHOT</version>
+  <version>1.2.0</version>
   <packaging>jar</packaging>
 
   <name>Doxia Site Renderer Resources</name>
