--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   </parent>
 
   <artifactId>doxia-site-renderer-resources</artifactId>
-  <version>1.2.0</version>
+  <version>1.2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>Doxia Site Renderer Resources</name>
